# bookstore_robot_nav

./: CMakeLists.txt  README.md  mission_report.txt  package.xml
config/: mission.yaml
launch/: navigation.launch  simulation.launch  slam.launch  task_manager.launch
maps/: map.pgm  map.yaml
models/qr_danisma/: model.config  model.sdf
models/qr_danisma/materials/scripts/: qr.material
models/qr_okuma/: model.config  model.sdf
models/qr_okuma/materials/scripts/: qr.material
models/qr_roman/: model.config  model.sdf
models/qr_roman/materials/scripts/: qr.material
models/qr_teknoloji/: model.config  model.sdf
models/qr_teknoloji/materials/scripts/: qr.material
models/qr_yeni/: model.config  model.sdf
models/qr_yeni/materials/scripts/: qr.material
src/: qr_reader.cpp  task_manager.cpp
worlds/: bookstore_qr.world  edit.world  son.world  test_empty.world
